# inferi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
.run/: inferi (dx, web).run.xml  inferi (wasm).run.xml  inferi-chat (cuda).run.xml  inferi-chat (push_constants,subgroups).run.xml  inferi-whisper-chat (small).run.xml  slai__dx_.run.xml
crates/inferi/: Cargo.toml  README.md  build.rs
crates/inferi-chat/: Cargo.toml  Dioxus.toml  README.md
crates/inferi-chat/src/: chat_gpt2.rs  chat_llama2.rs  chat_template.rs  cli.rs  llm.rs  main.rs  sampler.rs  segment_anything.rs
crates/inferi-chat/src/components/: chat.rs  home.rs
crates/inferi-shaders/: Cargo.toml
crates/inferi-shaders/src/: batched_multiquery_attention.rs  concat.rs  conv2d.rs  conv_transpose_2d.rs  fused_attention.rs  gather.rs  gemv_quant_q4_0x2.rs  gemv_quant_q4_1x2.rs  gemv_quant_q4_k.rs  gemv_quant_q5_0x2.rs  gemv_quant_q5_1x2.rs  gemv_quant_q5_k.rs  gemv_quant_q6_kx2.rs  gemv_quant_q8_0x2.rs  gemv_quant_q8_k.rs  get_rel_pos.rs  im2col.rs  layernorm.rs  lib.rs  pool2d.rs  reduce_axis.rs  rms_norm.rs  rope.rs  select.rs  silu.rs  softmax.rs  unary.rs  win_part.rs
crates/inferi-shaders/src/utils/: half.rs  mod.rs
crates/inferi-whisper-chat/: Cargo.toml
crates/inferi-whisper-chat/src/: chat_llama2.rs  chat_template.rs  chat_whisper.rs  llm.rs  main.rs  mic.rs  prompt.rs
crates/inferi/examples/: run_onnx.rs
crates/inferi/src/: context.rs  gguf.rs  lib.rs  quantization.rs  quantized_matrix.rs  safetensor.rs  tensor_cache.rs
crates/inferi/src/models/: mod.rs  sampler.rs
crates/inferi/src/models/llama2/: cpu.rs  mod.rs  transformer.rs
crates/inferi/src/models/segment_anything/: decode_mask.rs  encode_image.rs  encode_prompt.rs  fill_dense_pe.rs  io.rs  layernorm2d.rs  mod.rs  post_process_mask.rs
crates/inferi/src/models/tokenizers/: gpt2_tokenizer.rs  mod.rs
crates/inferi/src/models/whisper/: audio.rs  mod.rs  model.rs  multilingual.rs
crates/inferi/src/onnx/: error.rs  graph.rs  mod.rs  model.rs  ops.rs  tensor.rs
crates/inferi/src/ops/: batched_multiquery_attention.rs  concat.rs  conv2d_nchw.rs  conv_transpose_2d.rs  gather.rs  gemv_quant.rs  get_rel_pos.rs  im2col.rs  layernorm.rs  mod.rs  pool2d.rs  reduce_axis.rs  rms_norm.rs  rope.rs  select.rs  silu.rs  softmax.rs  unary.rs  win_part.rs
crates/inferi/tests/: onnx_ops.rs
