[workspace]
members = [
    "crates/inferi",
    "crates/inferi-chat",
    "crates/inferi-shaders",
    "crates/inferi-whisper-chat"
]
resolver = "2"

[workspace.dependencies]
nalgebra = { version = "0.34.0", features = ["convert-bytemuck"] }
wgpu = { version = "29", features = ["naga-ir"] }
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
async-channel = "2"
thiserror = "2"
tracing = "0.1.41"
glamx = { version = "0.2", default-features = false, features = ["nostd-libm", "bytemuck"] }
khal = { version = "0.1", git = "https://github.com/dimforge/khal" }
khal-std = { version = "0.1", git = "https://github.com/dimforge/khal" }
vortx = { version = "0.1", git = "https://github.com/dimforge/vortx" }
vortx-shaders = { version = "0.1", git = "https://github.com/dimforge/vortx" }
khal-builder = { version = "0.1", git = "https://github.com/dimforge/khal" }

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2", "dim3"))'
] }


[patch.crates-io]
#vortx = { path = "../vortx" }

#[patch."https://github.com/dimforge/khal"]
#khal = { path = "../khal/crates/khal" }
#khal-std = { path = "../khal/crates/khal-std" }
#khal-builder = { path = "../khal/crates/khal-builder" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
