[package]
name = "inferi-shaders"
version = { workspace = true }
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform GPU LLM inference shaders."
homepage = "https://inferi.rs"
repository = "https://github.com/dimforge/inferi"
edition = "2021"
license = "Apache-2.0"
links = "inferi-shaders"

[features]
# If this feature is enabled, some bound-checking will be disabled,
# possibly leading to UB if indexing out-of-bounds.
# There are two main situations where enabling this feature is desirable:
# - To get a sense of the overhead of bounds-checking on the GPU shader.
# - To disable bound-checking that breaks uniform execution frows when workgroup
#   barriers are involved. This is important when targetting the browser since it
#   enforces a uniform control flow check on shaders involving barriers. Without
#   enabling this feature, some shaders will fail to compile on the web.
# The recommendation is to debug with this feature **disabled**. And enable it only
# for deploying to the web.
unsafe_remove_boundchecks = [ "khal-std/unsafe_remove_boundchecks" ]

# When enabled, tensor shapes are passed via push constants instead of uniform buffers.
push_constants = [] # "vortx-shaders/push_constants" ]

# When enabled, shaders will use subgroup operations for reductions.
# When disabled, shaders will use manual reduction via shared memory.
subgroup_ops = []
cpu = ["khal-std/cpu"]
cpu-parallel = ["cpu", "khal-std/cpu-parallel"]
cuda = ["khal-std/cuda"]

[dependencies]
khal-std = { workspace = true }
vortx-shaders = { workspace = true }
glamx = { workspace = true }

[target.'cfg(not(any(target_arch = "spirv", target_arch = "nvptx64")))'.dependencies]
bytemuck = { workspace = true }
khal = { workspace = true }
