[package]
name = "inferi-whisper-chat"
version = "0.1.0"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
edition = "2021"
publish = false

[features]
default = ["webgpu"]
webgpu = ["inferi/webgpu"]
cpu = ["inferi/cpu"]

[dependencies]
khal = { workspace = true }
inferi = { version = "0.1", path = "../inferi" }

nalgebra = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
async-std = { version = "1", features = ["attributes"] }
minijinja = "2.5"
llm-samplers = "0.0.7"
rand = { version = "0.8", features = ["getrandom"] }
web-time = "1.1.0"
wgpu = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }
serde_json = "1"
log = "0.4"

# For whisper
candle-examples = { version = "0.9.2-alpha.1", features = ["symphonia"] }
cpal = "0.15"
hound = "3.5"
byteorder = "1.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
futures = "0.3.28"
memmap2 = "0.9.4"
colored = "3.0.0"
